angular-compiler-master/AngularGen/AngularParser.java
// Generated from C:/Users/SCC-M/Desktop/New folder/compiler-2.2/AngularParser.g4 by ANTLR 4.13.1
package AngularGen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, COMPONENT=3, SELECTOR=4, TEMPLATE=5, STYLES=6, BACKTICK=7, 
		TEMPLATE_EXPRESSION=8, LCURLEBRACE=9, RCURLEBRACE=10, LSQBRACKET=11, RSQBRACKET=12, 
		LPAREN=13, RPAREN=14, COLON=15, COMMA=16, DOT=17, SEMICOLON=18, STAR=19, 
		SELF_CLOSE=20, CLOSE_TAG=21, GT=22, LT=23, EQUAL=24, QUESTION_MARK=25, 
		PLUS=26, MINUS=27, SLASH=28, EQEQ=29, EQEQEQ=30, LESSOREQUAL=31, GREATEROREQUAL=32, 
		NOTEQUAL=33, CLASS=34, THIS=35, CONST=36, NULL=37, LET=38, VAR=39, FUNCTION=40, 
		RETURN=41, EXPORT=42, IDENTIFIER=43, EXTENDS=44, IMPLEMENTS=45, STRING=46, 
		BOOLEAN=47, NUMBER=48, ALPHABET_ONLY=49, PERCENTAGE=50, FUNCTION_VALUE=51, 
		COLOR=52, BINDING=53, EVENT_BINDING=54, STRUCTURAL_DIRECTIVE=55, PROPERTY_BINDING=56, 
		CSS_SELECTOR=57, WS=58, LINE_COMMENT=59, BLOCK_COMMENT=60, CSS_PROPERTY=61, 
		TEXT=62;
	public static final int
		RULE_application = 0, RULE_importStatement = 1, RULE_component = 2, RULE_componentMetadata = 3, 
		RULE_metadataEntry = 4, RULE_stylesContent = 5, RULE_cssContent = 6, RULE_cssRule = 7, 
		RULE_cssDeclaration = 8, RULE_cssValue = 9, RULE_inlineTemplate = 10, 
		RULE_htmlDocument = 11, RULE_htmlElement = 12, RULE_startTag = 13, RULE_endTag = 14, 
		RULE_selfClosingTag = 15, RULE_htmlContent = 16, RULE_tagName = 17, RULE_attribute = 18, 
		RULE_attributeValue = 19, RULE_typeScriptClass = 20, RULE_classBody = 21, 
		RULE_classMember = 22, RULE_propertyDeclaration = 23, RULE_methodDeclaration = 24, 
		RULE_parameterList = 25, RULE_methodBody = 26, RULE_statement = 27, RULE_expression = 28, 
		RULE_functionCall = 29, RULE_argumentList = 30, RULE_test = 31, RULE_literal = 32, 
		RULE_angularExpression = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"application", "importStatement", "component", "componentMetadata", "metadataEntry", 
			"stylesContent", "cssContent", "cssRule", "cssDeclaration", "cssValue", 
			"inlineTemplate", "htmlDocument", "htmlElement", "startTag", "endTag", 
			"selfClosingTag", "htmlContent", "tagName", "attribute", "attributeValue", 
			"typeScriptClass", "classBody", "classMember", "propertyDeclaration", 
			"methodDeclaration", "parameterList", "methodBody", "statement", "expression", 
			"functionCall", "argumentList", "test", "literal", "angularExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'from'", "'@Component'", "'selector'", "'template'", 
			"'styles'", "'`'", null, "'{'", "'}'", "'['", "']'", "'('", "')'", "':'", 
			"','", "'.'", "';'", "'*'", "'/>'", "'</'", "'>'", "'<'", "'='", "'?'", 
			"'+'", "'-'", "'/'", "'=='", "'==='", "'<='", "'>='", "'!='", "'class'", 
			"'this'", "'const'", "'null'", "'let'", "'var'", "'function'", "'return'", 
			"'export'", null, "'extends'", "'implements'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "FROM", "COMPONENT", "SELECTOR", "TEMPLATE", "STYLES", 
			"BACKTICK", "TEMPLATE_EXPRESSION", "LCURLEBRACE", "RCURLEBRACE", "LSQBRACKET", 
			"RSQBRACKET", "LPAREN", "RPAREN", "COLON", "COMMA", "DOT", "SEMICOLON", 
			"STAR", "SELF_CLOSE", "CLOSE_TAG", "GT", "LT", "EQUAL", "QUESTION_MARK", 
			"PLUS", "MINUS", "SLASH", "EQEQ", "EQEQEQ", "LESSOREQUAL", "GREATEROREQUAL", 
			"NOTEQUAL", "CLASS", "THIS", "CONST", "NULL", "LET", "VAR", "FUNCTION", 
			"RETURN", "EXPORT", "IDENTIFIER", "EXTENDS", "IMPLEMENTS", "STRING", 
			"BOOLEAN", "NUMBER", "ALPHABET_ONLY", "PERCENTAGE", "FUNCTION_VALUE", 
			"COLOR", "BINDING", "EVENT_BINDING", "STRUCTURAL_DIRECTIVE", "PROPERTY_BINDING", 
			"CSS_SELECTOR", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "CSS_PROPERTY", 
			"TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ApplicationContext extends ParserRuleContext {
		public ApplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_application; }
	 
		public ApplicationContext() { }
		public void copyFrom(ApplicationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ApplicationRootContext extends ApplicationContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public ApplicationRootContext(ApplicationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterApplicationRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitApplicationRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitApplicationRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApplicationContext application() throws RecognitionException {
		ApplicationContext _localctx = new ApplicationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_application);
		int _la;
		try {
			_localctx = new ApplicationRootContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				importStatement();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMPONENT) {
				{
				{
				setState(73);
				component();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	 
		public ImportStatementContext() { }
		public void copyFrom(ImportStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementDefinitionContext extends ImportStatementContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public TerminalNode LCURLEBRACE() { return getToken(AngularParser.LCURLEBRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AngularParser.IDENTIFIER, 0); }
		public TerminalNode RCURLEBRACE() { return getToken(AngularParser.RCURLEBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(AngularParser.SEMICOLON, 0); }
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(AngularParser.STRING, 0); }
		public ImportStatementDefinitionContext(ImportStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatementDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatementDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatementDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		int _la;
		try {
			_localctx = new ImportStatementDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IMPORT);
			setState(82);
			match(LCURLEBRACE);
			setState(83);
			match(IDENTIFIER);
			setState(84);
			match(RCURLEBRACE);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(85);
				match(FROM);
				setState(86);
				match(STRING);
				}
			}

			setState(89);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
	 
		public ComponentContext() { }
		public void copyFrom(ComponentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDefinitionContext extends ComponentContext {
		public TerminalNode COMPONENT() { return getToken(AngularParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(AngularParser.LPAREN, 0); }
		public ComponentMetadataContext componentMetadata() {
			return getRuleContext(ComponentMetadataContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AngularParser.RPAREN, 0); }
		public TypeScriptClassContext typeScriptClass() {
			return getRuleContext(TypeScriptClassContext.class,0);
		}
		public ComponentDefinitionContext(ComponentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_component);
		try {
			_localctx = new ComponentDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(COMPONENT);
			setState(92);
			match(LPAREN);
			setState(93);
			componentMetadata();
			setState(94);
			match(RPAREN);
			setState(95);
			typeScriptClass();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentMetadataContext extends ParserRuleContext {
		public ComponentMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentMetadata; }
	 
		public ComponentMetadataContext() { }
		public void copyFrom(ComponentMetadataContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentMetadataDefinitionContext extends ComponentMetadataContext {
		public TerminalNode LCURLEBRACE() { return getToken(AngularParser.LCURLEBRACE, 0); }
		public TerminalNode RCURLEBRACE() { return getToken(AngularParser.RCURLEBRACE, 0); }
		public List<MetadataEntryContext> metadataEntry() {
			return getRuleContexts(MetadataEntryContext.class);
		}
		public MetadataEntryContext metadataEntry(int i) {
			return getRuleContext(MetadataEntryContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ComponentMetadataDefinitionContext(ComponentMetadataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentMetadataDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentMetadataDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentMetadataDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentMetadataContext componentMetadata() throws RecognitionException {
		ComponentMetadataContext _localctx = new ComponentMetadataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentMetadata);
		int _la;
		try {
			_localctx = new ComponentMetadataDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(LCURLEBRACE);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 112L) != 0)) {
				{
				setState(98);
				metadataEntry();
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(99);
					match(COMMA);
					setState(100);
					metadataEntry();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(108);
			match(RCURLEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
